*Empty MediaWiki Message*

--- a/Макєдоньскъ_Бродъ.mw
+++ b/Макєдоньскъ_Бродъ.mw
@@ -1,3 +1,25 @@
-'''Македоньскъ Бродъ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Градъ|Имѧ = Македоньскъ Бродъ
+| знамѧ= 
+| знакъ = 
+| Дрьжава = {{Македонїѩ знамѧ}} [[Македонїıа]]
+| Глава = 
+| Людии = 4 тысѫща
+| Основанъ =  
+| Харта = [[Видъ:MK Makedonski brod.png|200 px]]
+|}}
+'''Македоньскъ Бродъ''' ({{lang-mk|Македонски Брод}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 4 тысѫща. Построѥнъ ѥстъ рѣцѣ [[Треска (рѣка)|Тресцѣ]].
+
+== Зьри такожде ==
+
 {{Македонїѩ гради}} 
 [[Category:Гради]]
+[[bg:Македонски брод]]
+[[hsb:Makedonski Brod]]
+[[mk:Македонски Брод]]
+[[nl:Makedonski Brod]]
+[[pl:Makedonski Brod]]
+[[sq:Makedonski Brodi]]
+[[sr:Македонски Брод]]
+[[sh:Makedonski Brod]]
+[[sv:Makedonski Brod]]
+[[tr:Makedonski Brod]]
