--- a/Макєдоньскъ_Бродъ.mw
+++ b/Макєдоньскъ_Бродъ.mw
@@ -14,6 +14,7 @@
 {{Македонїѩ гради}} 
 [[Category:Гради]]
 [[bg:Македонски брод]]
+[[en:Makedonski Brod]]
 [[hsb:Makedonski Brod]]
 [[mk:Македонски Брод]]
 [[nl:Makedonski Brod]]
