--- a/Макєдоньскъ_Бродъ.mw
+++ b/Макєдоньскъ_Бродъ.mw
@@ -3,11 +3,11 @@
 | знакъ = 
 | Дрьжава = {{Македонїѩ знамѧ}} [[Македонїıа]]
 | Глава = 
-| Людии = 4 тысѫща
+| Людии = 4 тысѫщѧ
 | Основанъ =  
 | Харта = [[Видъ:MK Makedonski brod.png|200 px]]
 |}}
-'''Македоньскъ Бродъ''' ({{lang-mk|Македонски Брод}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 4 тысѫща. Построѥнъ ѥстъ рѣцѣ [[Треска (рѣка)|Тресцѣ]].
+'''Македоньскъ Бродъ''' ({{lang-mk|Македонски Брод}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ: 4 тысѫщѧ. Построѥнъ рѣцѣ [[Треска (рѣка)|Тресцѣ]] ѥстъ.
 
 == Зьри такожде ==
 
