--- a/Макєдоньскъ_Бродъ.mw
+++ b/Макєдоньскъ_Бродъ.mw
@@ -7,7 +7,7 @@
 | Основанъ =  
 | Харта = [[Видъ:MK Makedonski brod.png|200 px]]
 |}}
-'''Македоньскъ Бродъ''' ({{lang-mk|Македонски Брод}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ: 4 тысѫщѧ. Построѥнъ рѣцѣ [[Треска (рѣка)|Тресцѣ]] ѥстъ.
+'''Македоньскъ Бродъ''' ({{lang-mk|Македонски Брод}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 4 тысѫщѧ. Построѥнъ рѣцѣ [[Треска (рѣка)|Тресцѣ]] ѥстъ.
 
 == Зьри такожде ==
 
