--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -16,46 +16,7 @@
 
 == Зьри такожде ==
 
-=== Гради македоньсци ===
-
-{| 
-| valign="top" |
-* [[Съкопиѥ]] 
-* [[Битола]]
-* [[Прилѣпъ]]
-* [[Охридъ]]
-* [[Кѹманово]]
-* [[Стрѹга]]
-* [[Ресенъ]]
-| width="20px" |
-| valign="top" |
-* [[Доиранъ]]
-* [[Велесъ]]
-* [[Тетово]]
-* [[Гостивар̑ь]] 
-* [[Дебаръ]]
-* [[Геѵгела]]
-* [[Кичево]]
-| width="20px" |
-| valign="top" |
-* [[Берово]]
-* [[Пехъчево]]
-* [[Дельчево]]
-* [[Богоданьци]]
-* [[Свети Николе]]
-* [[Демиръ Капи]]
-* [[Штипъ]]
-| width="20px" |
-| valign="top" |
-* [[Кочани]]
-* [[Валандово]]
-* [[Виньница]] 
-* [[Крива Паланка]]
-* [[Македоньска Каменица]]
-* [[Отешево]]
-* [[Македоньскъ Бродъ]]
-|}
-
+{{Македонїѩ гради}}
 {{Словѣньскы дрьжавы}}
 [[Category:Македонї|*]]
 [[Category:Страны]]
