*Empty MediaWiki Message*

--- a/Кочани.mw
+++ b/Кочани.mw
@@ -1,5 +1,18 @@
-'''Кочани''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Градъ|Имѧ = Кочани
+| знамѧ= 
+| знакъ = KochaniCoat.png
+| Дрьжава = {{Македонїѩ знамѧ}} [[Македонїıа]]
+| Глава = 
+| Людии = 38,092
+| Основанъ =  
+| Харта = [[Видъ:MK Kocani.png|200 px]]
+|}}
+'''Кочани''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 38 тысѫщь.
+
+== Зьри такожде ==
+
 {{Македонїѩ гради}} 
+{{commonscat|Kočani}}
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
