Таѵтологї бѣ. Речениѥ мѣнихъ.

--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -12,7 +12,7 @@
 
 {{Дрѹѕи съмысли}}
 
-'''Македонї''' ([[Македоньскъ ѩзыкъ|македоньскы]]: ''Македонија''), епїсимьно имѧ '''Димократї Македонї''' ([[Македоньскъ ѩзыкъ|македоньскы]]: ''Република Македонија''), ѥстъ дрьжава срѣдьн̑ии [[Балкани|Балканъ]]. Стольнъ градъ ѥстъ [[Съкопиѥ]]. Дрьжавьнъ ѩзыкъ Македонїѩ ѥстъ [[Македоньскъ ѩзыкъ|ѩзыкъ македоньскъ]]. Македонїи людии 2 леѡдръ обитаѥтъ.
+'''Македонї''' ([[Македоньскъ ѩзыкъ|македоньскы]]: ''Македонија''), епїсимьно имѧ '''Димократї Македонї''' ([[Македоньскъ ѩзыкъ|македоньскы]]: ''Република Македонија''), ѥстъ дрьжава срѣдьн̑ии [[Балкани|Балканъ]]. Стольнъ градъ ѥстъ [[Съкопиѥ]]. Дрьжавьнъ [[Македоньскъ ѩзыкъ|македоньскъ]] ѩзыкъ ѥстъ. Македонїи людии 2 леѡдръ обитаѥтъ.
 
 == Зьри такожде ==
 
