*Empty MediaWiki Message*

--- a/Свѧтꙑи_Нїколаи_·_градъ.mw
+++ b/Свѧтꙑи_Нїколаи_·_градъ.mw
@@ -1,3 +1,24 @@
-'''Свѧтыи Нїколаи''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Свети Николе'') [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Градъ|Имѧ = Свѧтыи Нїколаи
+| знамѧ= 
+| знакъ = 
+| Дрьжава ={{Македонїѩ знамѧ}} [[Македонї]]
+| Глава = 
+| Людии = 13 292 
+| Основанъ = 
+| Харта = [[Видъ:MK Sveti Nikole.png|200px]]
+}}
+'''Свѧтыи Нїколаи''' ({{lang-mk|Свети Николе}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 13 тысѫщь.
+
+== Зьри такожде ==
+
 {{Македонїѩ гради}}
 [[Category:Гради]]
+[[mk:Свети Николе]]
+[[bg:Свети Никола (град)]]
+[[en:Sveti Nikole]]
+[[nl:Sveti Nikole]]
+[[pl:Sveti Nikole]]
+[[sh:Sveti Nikole]]
+[[sr:Свети Николе]]
+[[sv:Sveti Nikole]]
+[[vo:Sveti Nikole]]
