Нѣкако мъногосъмысли статїѫ сътворихъ.

--- a/Виньница.mw
+++ b/Виньница.mw
@@ -1,1 +1,9 @@
-#REDIRECT [[Виньница (Македонїи)]]
+{{Образьць:Мъногосъмыслиѥ}}
+
+'''Виньница''' ѥтерѣхъ словѣньскъ градъ имѧ естъ.
+
+Виждь по сѥмѹ:
+
+[[Виньница (Македонїи)|Виньница]] Македонїи.
+<br>
+[[Виньница (Ѹкраинѣ)|Виньница]] Ѹкраинѣ.
