Допьсахъ грады. Нѣчьто исправихъ.

--- a/Виньница.mw
+++ b/Виньница.mw
@@ -1,9 +1,13 @@
 {{Образьць:Мъногосъмыслиѥ}}
 
-'''Виньница''' ѥтерѣхъ словѣньскъ градъ имѧ естъ.
+'''Виньница''' ѥтерѣхъ словѣньскъ селѥнии имѧ естъ.
 
 Виждь по сѥмѹ:
 
-[[Виньница (Македонїи)|Виньница]] Македонїи.
+[[Виньница (Македонїи)|Виньница]] градъ [[Македонї|Македонїи]].
 <br>
-[[Виньница (Ѹкраинѣ)|Виньница]] Ѹкраинѣ.
+[[Виньница (Ѹкраинѣ)|Виньница]] градъ [[Ѹкраина|Ѹкраинѣ]].
+<br>
+[[Виньница (Хръватьсцѣ)|Виньница]] обьщина [[Хръватьска|Хръватьсцѣ]].
+<br>
+[[Виньница (Словѣньсцѣ)|Виньница]] градъ [[Словѣньско|Словѣньсцѣ]].
