--- a/Сѣвєрьна_Макєдонїꙗ.mw
+++ b/Сѣвєрьна_Макєдонїꙗ.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Димократї Македонї 
 | знамѧ= [[Видъ:Flag of Macedonia.svg|150px]]
-| знакъ = [[image:SR Macedonia coa.png|80px]]
+| знакъ = [[image:Republic-of-Macedonia-coat-of-arms.svg|80px]]
 | map = LocationMacedonia.svg 
 | Стольнъ градъ = [[Съкопиѥ]] 
 | Ѩзыкъ = [[Македоньскъ ѩзыкъ|македоньскъ]]
