--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -7,6 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:MK Vinica.png|200px]]
 }}
+{{дрѹѕи съмысли|Виньница}}
 '''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньничьскы обьщины главьнъ градъ ѥстъ. Людии обитаѥтъ 14 тысѫщѧ.
 == Зьри такожде ==
 {{Македонїѩ гради}}
