robot  Adding: [[fr:Resen (Bosilegrad)]]

--- a/Рѣсьнъ.mw
+++ b/Рѣсьнъ.mw
@@ -6,6 +6,7 @@
 [[bg:Ресен]]
 [[da:Resen (Makedonien)]]
 [[en:Resen, Republic of Macedonia]]
+[[fr:Resen (Bosilegrad)]]
 [[hsb:Resen]]
 [[mk:Ресен]]
 [[nl:Resen]]
