Дрѹго града имѧ допьсахъ.

--- a/Римъ.mw
+++ b/Римъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = лѣта 753 до х҃р
 | Харта =[[Видъ:Italyrome.png|200px]]
 |}}
-'''Римъ''' ({{lang-la|Rōma}}, {{lang-it|Roma}}) южьны [[Еѵрѡпа|Еѵрѡпы]] великъ градъ и [[Италї|Италїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ Римѣ 2,7 леѡдръ. Основанъ лѣта 753 до х҃р ѥстъ.
+'''Римъ''' ({{lang-la|Rōma}}, {{lang-it|Roma}}, [[словѣньскъ ѩзыкъ|словѣньскы]] же и ''Рѹмъ'') южьны [[Еѵрѡпа|Еѵрѡпы]] великъ градъ ѥстъ. [[Италї|Италїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ Римѣ 2,7 леѡдръ. Основанъ лѣта 753 до х҃р ѥстъ.
 
 {{Commonscat|Rome}}
 [[Category:Гради]]
