--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -13,7 +13,7 @@
 
 == Їсторї ==
 
-Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, 2006 годѣ по въсенародьна гласовани Чрьна Гора и Срьбї стали ѥсте пакы самостотел҄ьны дрьжавы.
+Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, лѣта 2006 по вьсѥнародьнѣ гласовании Чрьна Гора и Срьбї сталѣ пакы самостотел҄ьнѣ дрьжавѣ ѥсте.
 
 == Гради Срьбїѩ ==
 *'''[[Бѣлъ Градъ (Срьбїи)]]'''
