*Empty MediaWiki Message*

--- a/Крагоуѥвьць.mw
+++ b/Крагоуѥвьць.mw
@@ -7,7 +7,8 @@
 | Основанъ =1476
 | Харта = 
 }}
-'''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) ѥстъ градъ [[Срьбї|Срьбїѩ]]. Людии обитаѥтъ 193 тысѫщи.
+'''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) [[Срьбї|Срьбїѩ]] градъ ѥстъ. Людии обитаѥтъ 193 тысѫщи. Помѣновенъ запрьва лѣтописи лѣта 1476 ѥстъ. [[Срьбьско Кралѥвьство|Срьбьска Кралѥвьства]] стольнъ градъ междѹ 1818—1841 лѣты бѣ.
+
 [[Category:Гради]]
 [[Катигорї:Срьбї]]
 [[ru:Крагуевац]]
