*Empty MediaWiki Message*

--- a/Крагоуѥвьць.mw
+++ b/Крагоуѥвьць.mw
@@ -5,10 +5,11 @@
 | Глава = 
 | Людии =   193390
 | Основанъ =1476
-| Харта = 
+| Харта = [[Видъ:Serbia Kragujevac.png|200px]]
 }}
 '''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) [[Срьбї|Срьбїѩ]] градъ ѥстъ. Людии обитаѥтъ 193 тысѫщи. Помѣновенъ запрьва лѣтописи лѣта 1476 ѥстъ. [[Срьбьско Кралѥвьство|Срьбьска Кралѥвьства]] стольнъ градъ междѹ 1818—1841 лѣты бѣ.
 
+{{commonscat|Kragujevac}}
 [[Category:Гради]]
 [[Катигорї:Срьбї]]
 [[ru:Крагуевац]]
