--- a/Крагоуѥвьць.mw
+++ b/Крагоуѥвьць.mw
@@ -7,7 +7,7 @@
 | Основанъ =1476
 | Харта = [[Видъ:Serbia Kragujevac.png|200px]]
 }}
-'''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) [[Срьбї|Срьбїѩ]] градъ ѥстъ. Людии обитаѥтъ 193 тысѫщи. Помѣновенъ запрьва лѣтописи лѣта 1476 ѥстъ. [[Срьбьско Кралѥвьство|Срьбьска Кралѥвьства]] стольнъ градъ междѹ 1818—1841 лѣты бѣ.
+'''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) [[Срьбї|Срьбїѩ]] градъ ѥстъ. Людии обитаѥтъ 193 тысѫщѧ. Помѣновенъ запрьва лѣтописи лѣта 1476 ѥстъ. [[Срьбьско Кралѥвьство|Срьбьска Кралѥвьства]] стольнъ градъ междѹ 1818—1841 лѣты бѣ.
 
 {{commonscat|Kragujevac}}
 [[Category:Гради]]
