--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:Karte Ljubljana si.png|200 px]]
 |}}
 '''Люблна''' ({{lang-sl|Ljubljana}}) стольнъ градъ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] ѥсть. Люблна построѥна ѥстъ рѣцѣ [[Люблѩнїца(рѣка)|Люблницѣ]] лѣта 1144. Людии обитаѥтъ 258 873.
-
+[[Видъ:Lublana9.jpg|thumb|right]]
 {{commonscat|Ljubljana}}
 [[Катигорї:Гради]]
 [[Катигорї:Їллѷрїиска Словѣнї| ]]
