--- a/Вилн҄ь.mw
+++ b/Вилн҄ь.mw
@@ -8,7 +8,7 @@
 | Харта = 
 |}}
 
-'''Вилн҄ь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] парадїгма ju, яко {{lang-lt|Vilnius}}, {{lang-be|Вільня, Вільнюс}}, {{lang-pl|Wilno}}), [[Литъва|Литъвы]] стольнъ градъ ѥстъ.
+'''Вилн҄ь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] парадїгма ju, яко {{lang-lt|Vilnius}}, {{lang-be|Вільня, Вільнюс}}, {{lang-pl|Wilno}}), [[Литъва|Литъвы]] стольнъ градъ ѥстъ. Помѣновенъ запрьва <!-- лѣтописи--> лѣта 1323 ѥстъ.
 
 Вилн҄ь древлѥ [[Литъвьско Велико Кънѧжьство |Литъвьска Велика Кънѧжьства]] стольнъ градъ бѣаше.
 
