*Empty MediaWiki Message*

--- a/Вилн҄ь.mw
+++ b/Вилн҄ь.mw
@@ -1,18 +1,19 @@
-{{Градъ|Имѧ = Вилн҄ь
+{{Селѥниѥ|Имѧ = Вилн҄ь
 | знамѧ= Flag of Vilnius.svg
 | знакъ = Grand_Coat_of_arms_of_Vilnius.png
 | Дрьжава = Литьва
 | Глава = 
-| Людии = 
-| Основанъ = 
-| Харта = 
+| Людии = 553,904
+| Основанъ = 1323
+| Нареченъ градъ =1387
+| Харта = [[Видъ:LietuvaVilnius.png|200px]]
 |}}
 
-'''Вилн҄ь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] парадїгма ju, яко {{lang-lt|Vilnius}}, {{lang-be|Вільня, Вільнюс}}, {{lang-pl|Wilno}}), [[Литъва|Литъвы]] стольнъ градъ ѥстъ. Помѣновенъ запрьва <!-- лѣтописи--> лѣта 1323 ѥстъ.
+'''Вилн҄ь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] парадїгма ju, яко {{lang-lt|Vilnius}}, {{lang-be|Вільня, Вільнюс}}, {{lang-pl|Wilno}}), [[Литъва|Литъвы]] стольнъ градъ ѥстъ. Помѣновенъ запрьва <!-- лѣтописи--> лѣта 1323 ѥстъ. Нареченъ градъ лѣта 1387 ѥстъ. Людии обитаѥтъ 554 тысѫщи.
 
 Вилн҄ь древлѥ [[Литъвьско Велико Кънѧжьство |Литъвьска Велика Кънѧжьства]] стольнъ градъ бѣаше.
 
-
+{{commonscat|Vilnius}}
 [[Category:Гради]]
 [[Category:Литъва]]
 [[Category:Литъвьско Велико Кънѧжьство]]
