robot  Adding: [[be-x-old:Санкт-Пецярбург]]

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -49,6 +49,7 @@
 [[ar:سانت بطرسبرغ]]
 [[az:Sankt Peterburq]]
 [[be:Горад Санкт-Пецярбург]]
+[[be-x-old:Санкт-Пецярбург]]
 [[bg:Санкт Петербург]]
 [[br:Sankt Peterbourg]]
 [[bs:Petrograd]]
