--- a/Напьсаниѥ_Самоуилоу.mw
+++ b/Напьсаниѥ_Самоуилоу.mw
@@ -6,7 +6,7 @@
 <blockquote>въ имѧ ѡтьца и съина и с҃таго дѹха· азъ самоип(л)ь рабъ бжи полагаѫ
 памѧть ѡтьцѹ и матєри и братѹ на кръстѣхъ сихъ· имєна ѹсъпъшихъ
 никола рабъ бж҃и ... ѣ давдъ написа ... въ лѣто отъ сътворєни мирѹ
-ѕ҃· фа҃· инъдиктъ ѕ҃·</blockquote>
+ѕ҃· фа҃· инъдикта ѕ҃·</blockquote>
 
 [[Category:Словѣньскъ ѩзыкъ]]
 
