--- a/Вилн҄ь.mw
+++ b/Вилн҄ь.mw
@@ -1,4 +1,5 @@
 {{Селѥниѥ|Имѧ = Вилн҄ь
+| Тѷпъ = Градъ
 | знамѧ= Flag of Vilnius.svg
 | знакъ = Grand_Coat_of_arms_of_Vilnius.png
 | Дрьжава = Литьва
