--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -9,7 +9,7 @@
 </div>
 
 == Зьри такожде ==
-* [[incubator:Wp/myv|Википедї пьсана ерзньскыимь ѩзыкомь въ инкѹбаторе.]]
+* [[incubator:Wp/myv|Википедї пьсана ерзньскыимь ѩзыкомь въ инкѹбаторѣ.]]
 
 [[Катигорї:Сѹмьско-ѫгрьсци ѩзыци]]
 
