думается мне, что должна быть такая категорь

--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -12,7 +12,7 @@
 * [[incubator:Wp/myv|Википедї пьсана ерзньскыимь ѩзыкомь въ инкѹбаторѣ.]]
 
 [[Катигорї:Сѹмьско-ѫгрьсци ѩзыци]]
-
+[[Category:Рѡсїѩ ѩзыци]]
 [[br:Erzyeg]]
 [[ca:Erzya]]
 [[cv:Ирçĕ чĕлхи]]
