--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -1,15 +1,17 @@
 {{Градъ|Имѧ = Ѹлиновьскъ
+| Тѷпъ=Градъ
 | знамѧ= Flag_of_Ulyanovsk.svg
 | знакъ = Coat_of_Arms_of_Ulianovsk_(2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = 
 | Людии = 623 тысѫщь
 | Основанъ = 1648
-| Харта = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|200px]]
+| Харта = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|200px|Ѹлиновьска видъ]]
 |}}
+[[Видъ:YJlb9HoBCK 1.JPG|thumb|left|]]
+'''Ѹлиновьскъ''' ({{lang-ru|Ульяновск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
 
-'''Ѹлиновьскъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновск'') [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
-
+{{commonscat|Ulyanovsk}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 
