*Empty MediaWiki Message*

--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Ерзньскъ ѩзыкъ''' (ерзньскы: ''эрзянь кель'') ѹральска дрѣвесе [[Сѹмьско-ѫгрьсци ѩзыци|сѹмьско-ѫгрьска вѣтви]] ѩзыкъ ѥстъ. Людии глаголѭщь ерзньскы 84 тысѧщи сѫтъ. [[Рѡсї|Рѡсїѩ]] [[Мордовьска Дїмократї|Мордовьскы Дїмократїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. 
+'''Ерзньскъ ѩзыкъ''' (ерзньскы: ''эрзянь кель'') ѹральска дрѣвесе [[Сѹмьско-ѫгрьсци ѩзыци|сѹмьско-ѫгрьска вѣтви]] ѩзыкъ ѥстъ. Людии глаголѭщь ерзньскы 84 тысѧщи сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордовьска Дїмократї|Мордовьскы Дїмократїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. 
 
 == Ерзньска азъбѹкы  ==
 Ерзньска азъбѹкы ко рѹсьска азъбѹкы ѥстъ.
