--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -1,7 +1,7 @@
-'''Ерзньскъ ѩзыкъ''' (ерзньскы: ''эрзянь кель'') ѹральска дрѣвесе [[Сѹмьско-ѫгрьсци ѩзыци|сѹмьско-ѫгрьска вѣтви]] ѩзыкъ ѥстъ. Людии глаголѭщь ерзньскы 84 тысѧщи сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордовьска Дїмократї|Мордовьскы Дїмократїѩ]] дрьжавьнъ ѩзыкъ ѥстъ. 
+'''Е́рзн҄ьскъ ѩзыкъ''' (ерзн҄ьскы: ''эрзянь кель'') [[Ѹральсци ѩзыци|ѹральска]] дрѣвесе [[Финно-ѫгрьсци ѩзыци|финно-ѫгрьскы]] сѣмиѩ [[Финно-вльжьсци ѩзыци|финно-вльжьскы]] вѣтви ѩзыкъ ѥстъ. Людии глаголѭщь ерзн҄ьскы 84 тысѫщѧ сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордъвьска димократї|Мордъвьскы]] димократїѩ дрьжавьнъ ѩзыкъ ѥстъ (съ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьскомь]] и [[рѹсьскъ ѩзыкъ|рѹсьскомь]]). 
 
-== Ерзньска азъбѹкы  ==
-Ерзньска азъбѹкы ко рѹсьска азъбѹкы ѥстъ.
+== Ерзн҄ьска азъбѹкы  ==
+Тажде ко рѹсьска ѥстъ.
 <div style="margin: 4px;padding: 4px;width:50%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Бб Вв Гг Дд Ее Ёё Жж Зз Ии Йй<br />
 Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф<br />
