Ѥще блазны исправихъ.

--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -9,7 +9,7 @@
 </div>
 
 == Зьри такожде ==
-* [[incubator:Wp/myv|Википедї пьсана ерзньскыимь ѩзыкомь въ инкѹбаторѣ.]]
+* [[incubator:Wp/myv|Начинании википедї пьсана ерзн҄ьскыимь ѩзыкомь.]]
 
 [[Катигорї:Сѹмьско-ѫгрьсци ѩзыци]]
 [[Category:Рѡсїѩ ѩзыци]]
