--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -4,12 +4,12 @@
 | знакъ = Coat_of_Arms_of_Ulianovsk_(2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = 
-| Людии = 623 тысѫщь
+| Людии = 623 тысѫщѧ
 | Основанъ = 1648
 | Харта = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|200px|]]
 |}}
 [[Видъ:YJlb9HoBCK 1.JPG|thumb|left|Ѹлиновьска видъ]]
-'''Ѹлиновьскъ''' ({{lang-ru|Ульяновск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
+'''Ѹлиновьскъ''' ({{lang-ru|Ульяновск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщѧ. Градъ построѥнъ рѣкѹ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
 
 {{commonscat|Ulyanovsk}}
 [[Катигорї:Гради]]
