--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -9,7 +9,7 @@
 | Харта = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|200px|]]
 |}}
 [[Видъ:YJlb9HoBCK 1.JPG|thumb|left|Ѹлиновьска видъ]]
-'''Ѹлиновьскъ''' ({{lang-ru|Ульяновск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщѧ. Градъ построѥнъ рѣкѹ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
+'''Ѹлиновьскъ''' ({{lang-ru|Ульяновск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщѧ. Градъ построѥнъ рѣкѹ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
 
 {{commonscat|Ulyanovsk}}
 [[Катигорї:Гради]]
