--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -46,7 +46,7 @@
 {{commonscat|Russian language}}
 
 [[Category:Словѣньсци ѩзыци]]
-[[Category:Рѡсї]]
+[[Category:Рѡсїѩ ѩзыци]]
 
 [[af:Russies]]
 [[an:Idioma ruso]]
