*Empty MediaWiki Message*

--- a/Татарьскъ_ѩꙁꙑкъ.mw
+++ b/Татарьскъ_ѩꙁꙑкъ.mw
@@ -10,7 +10,7 @@
 == Зьри такожде ==
 {{InterWiki|tt|Täwge Bit||татарьскыимь}}
 [[Катигорї:Ѩзыци]]
-
+[[Category:Рѡсїѩ ѩзыци]]
 [[af:Tataars]]
 [[ar:لغة تترية]]
 [[ast:Tártaru (llingua)]]
