*Empty MediaWiki Message*

--- a/Башкортьскъ_ѩꙁꙑкъ.mw
+++ b/Башкортьскъ_ѩꙁꙑкъ.mw
@@ -46,7 +46,7 @@
 
 {{InterWiki|ba|Баш бит||Башкортьскыимь}}
 [[Category:Ѩзыци]]
-
+[[Category:Рѡсїѩ ѩзыци]]
 [[az:Başqırd dili]]
 [[ba:Башҡорт теле]]
 [[bg:Башкирски език]]
