--- a/Татарьскъ_ѩꙁꙑкъ.mw
+++ b/Татарьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Татарьскъ ѩзыкъ''' [[Татарстанъ|Татарстанѹ]] Димократїѩ главьнъ ѩзыкъ ѥстъ. Симъ ѩзыкомъ 5,3 лѡдръ людии глаголѣтъ.
+'''Татарьскъ ѩзыкъ''' (татырьскы: ''Татар теле'', ''Татарча'') [[Татаростанъ|Татаростанѹ]] Димократїѩ епїсимьнъ ѩзыкъ ѥстъ. Людии глаголѭщь: 5,3 леѡдръ.
 
 ==Татарьска [[азъбѹкы]]==
 
