--- a/Татарьскъ_ѩꙁꙑкъ.mw
+++ b/Татарьскъ_ѩꙁꙑкъ.mw
@@ -1,6 +1,6 @@
 '''Татарьскъ ѩзыкъ''' (татырьскы: ''Татар теле'', ''Татарча'') [[Татаростанъ|Татаростанѹ]] Димократїѩ епїсимьнъ ѩзыкъ ѥстъ. Людии глаголѭщь: 5,3 леѡдръ.
 
-==Татарьска [[азъбѹкы]]==
+==Татарьска азъбѹкы==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Әә Бб Вв Гг Дд Ее (Ёё) Жж Җҗ Зз Ии Йй Кк Лл Мм Нн Ңң Оо Өө Пп Рр Сс Тт Уу Үү Фф Хх Һһ Цц Чч Шш Щщ Ьь Ыы Ъъ Ээ Юю Яя</div>
