*Empty MediaWiki Message*

--- a/Кон҄ьсковолꙗ.mw
+++ b/Кон҄ьсковолꙗ.mw
@@ -1,7 +1,8 @@
-{{Градъ|Имѧ = Кон҄ьсковол
+{{Селѥниѥ|Имѧ = Кон҄ьсковол
+| Тѷпъ = Село
 | знамѧ= 
 | знакъ = POL gmina Końskowola COA.svg
-| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
+| Дрьжава = {{Пол̑ьскы знамѧ}} [[Пол̑ьска]]
 | Глава = 
 | Людии = 2188 
 | Основанъ = 
