*Empty MediaWiki Message*

--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -9,7 +9,7 @@
 </div>
 
 == Зьри такожде ==
-* [[incubator:Wp/myv|Начинании википедї пьсана ерзн҄ьскыимь ѩзыкомь.]]
+{{Incubator|myv|ерзн҄ьскыимь}}
 
 [[Катигорї:Сѹмьско-ѫгрьсци ѩзыци]]
 [[Category:Рѡсїѩ ѩзыци]]
