похоже, да не то же

--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -1,12 +1,47 @@
-'''Е́рзн҄ьскъ ѩзыкъ''' (ерзн҄ьскы: ''эрзянь кель'') [[Ѹральсци ѩзыци|ѹральска]] дрѣвесе [[Финно-ѫгрьсци ѩзыци|финно-ѫгрьскы]] сѣмиѩ [[Финно-вльжьсци ѩзыци|финно-вльжьскы]] вѣтви ѩзыкъ ѥстъ. Людии глаголѭщь ерзн҄ьскы 84 тысѫщѧ сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордъвьска димократї|Мордъвьскы]] димократїѩ дрьжавьнъ ѩзыкъ ѥстъ (съ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьскомь]] и [[рѹсьскъ ѩзыкъ|рѹсьскомь]]). 
+'''Е́рзн҄ьскъ ѩзыкъ''' (ерзн҄ьскы: ''эрзянь кель'') [[Ѹральсци ѩзыци|ѹральска]] дрѣвесе [[Финно-ѫгрьсци ѩзыци|финно-ѫгрьскы]] сѣмиѩ [[Финно-вльжьсци ѩзыци|финно-вльжьскы]] вѣтви ѩзыкъ ѥстъ. Родьствьнъ ѩзыкъ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьска]] ѩзыка ѥстъ. Людии глаголѭщь ерзн҄ьскы 84 тысѫщѧ сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордъвьска димократї|Мордъвьскы]] димократїѩ дрьжавьнъ ѩзыкъ ѥстъ (съ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьскомь]] и [[рѹсьскъ ѩзыкъ|рѹсьскомь]]). 
 
 == Ерзн҄ьска азъбѹкы  ==
-Тажде ко рѹсьска ѥстъ.
-<div style="margin: 4px;padding: 4px;width:50%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Бб Вв Гг Дд Ее Ёё Жж Зз Ии Йй<br />
-Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф<br />
-Хх Цц Чч Шш Щщ Ъъ Ыы Ьь Ээ Юю Яя
-</div>
+Тажде ко рѹсьска ѥстъ. 
+{| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
+|-----
+! Бѹкы !! звѫкъ
+| width="1" rowspan="22" | &nbsp;
+! Бѹкы !! звѫкъ
+| width="1" rowspan="22" | &nbsp;
+! Бѹкы !! звѫкъ
+|-----
+| А а || [a] ||| О о || [o] ||| Э э || [e]
+|-----
+| Б б || [b] ||| П п  || [p] ||| Ю ю || [ju]
+|-----
+| В в || [v], [w] ||| Р р || [r] ||| Я я || [ja], [jä]
+|-----
+| Г г || [g] ||| С с || [s]
+|-----
+| Д д || [d] ||| Т т || [t]
+|-----
+| Е е || [je] || У у || [u]
+|-----
+| Ё ё || [jo] || Ф ф || [f]
+|-----
+| Ж ж  || [ʒ] || Х х || [h]
+|-----
+| З з || [z] || Ц ц || [ʦ]
+|-----
+| И и || [i] || Ч ч || [ʧ]
+|-----
+| Й й || [j] || Ш ш  || [ʃ]
+|-----
+| К к || [k] || Щ щ || [ʃʧ]
+|-----
+|Л л  || [l] || Ъ ъ  || -
+|-----
+| М м || [m] || Ы ы || [ï]
+|-----
+| Н н || [n] || Ь ь || [ʲ]
+|-----
+|}
+
 
 == Зьри такожде ==
 {{Incubator|myv|ерзн҄ьскыимь}}
