--- a/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Єрꙁꙗн҄ьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Е́рзн҄ьскъ ѩзыкъ''' (ерзн҄ьскы: ''эрзянь кель'') [[Ѹральсци ѩзыци|ѹральска]] дрѣвесе [[Финно-ѫгрьсци ѩзыци|финно-ѫгрьскы]] сѣмиѩ [[Финно-вльжьсци ѩзыци|финно-вльжьскы]] вѣтви ѩзыкъ ѥстъ. Родьствьнъ ѩзыкъ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьска]] ѩзыка ѥстъ. Людии глаголѭщь ерзн҄ьскы 84 тысѫщѧ сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордъвьска димократї|Мордъвьскы]] димократїѩ дрьжавьнъ ѩзыкъ ѥстъ (съ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьскомь]] и [[рѹсьскъ ѩзыкъ|рѹсьскомь]]). 
+'''Е́рзн҄ьскъ ѩзыкъ''' (ерзн҄ьскы: ''эрзянь кель'') [[Ѹральсци ѩзыци|ѹральска]] дрѣвесе [[Сѹмьско-ѫгрьсци ѩзыци|сѹмьско-ѫгрьскы]] сѣмиѩ [[Сѹмьско-вльжьсци ѩзыци|сѹмьско-вльжьскы]] вѣтви ѩзыкъ ѥстъ. Родьствьнъ ѩзыкъ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьска]] ѩзыка ѥстъ. Людии глаголѭщь ерзн҄ьскы 84 тысѫщѧ сѫтъ (лѣта 2002). [[Рѡсї|Рѡсїѩ]] [[Мордъвьска димократї|Мордъвьскы]] димократїѩ дрьжавьнъ ѩзыкъ ѥстъ (съ [[Мокшен҄ьскъ ѩзыкъ|мокшен҄ьскомь]] и [[рѹсьскъ ѩзыкъ|рѹсьскомь]]). 
 
 == Ерзн҄ьска азъбѹкы  ==
 Тажде ко рѹсьска ѥстъ. 
