+ [[oldwikisource:Отче нашъ|Отче нашъ]]

--- a/Отьчє_нашь.mw
+++ b/Отьчє_нашь.mw
@@ -9,6 +9,8 @@
 :ко твоѥ естъ цѣсарьствиѥ и сила и слава въ вѣкы .
 :Аминь.
 
+* [[oldwikisource:Отче нашъ|Отче нашъ]]
+
 [[Катигорї:Хрїстїаньство]]
 
 [[als:Vaterunser]]
