*Empty MediaWiki Message*

--- a/Отьчє_нашь.mw
+++ b/Отьчє_нашь.mw
@@ -9,7 +9,9 @@
 :ко твоѥ естъ цѣсарьствиѥ и сила и слава въ вѣкы .
 :Аминь.
 
-* [[oldwikisource:Отче нашъ|Отче нашъ]]
+== Зьри такожде ==
+
+* [[oldwikisource:Отче нашъ|Отче нашъ - Wikisource]]
 
 [[Катигорї:Хрїстїаньство]]
 
