--- a/Кон҄ьсковолꙗ.mw
+++ b/Кон҄ьсковолꙗ.mw
@@ -8,7 +8,7 @@
 | Основанъ = 
 | Харта = [[Видъ:KurówPoland.png|200 px]]
 }}
-'''Кон҄ьсковол''' ({{lang-pl|Końskowola}}) [[Пол̑ьска|Пол̑ьскы]] въстока [[село]] ѥстъ. Людии обитаѥтъ 2 тысѫщи. Построѥна ѥстъ рѣцѣ Кѹровъцѣ.
+'''Кон҄ьсковол''' ({{lang-pl|Końskowola}}) [[Пол̑ьска|Пол̑ьскы]] въстока [[село]] ѥстъ. Людии обитаѥтъ 2 тысѫщи. Построѥна ѥстъ рѣцѣ [[Кѹровъка|Кѹровъцѣ]].
 
 [[Category:Пол̑ьска]]
 
