карта: Блъгарї в ЕС

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Блъгарї  
 | знамѧ= [[Видъ:Flag of Bulgaria.svg|150px]]
 | знакъ = [[image:Bulgaria COA.svg|80px]]
-| map = LocationBulgaria.svg 
+| map = EU location BUL.png
 | Стольнъ градъ = [[Софї]]
 | Ѩзыкъ = [[Блъгарьскъ ѩзыкъ|блъгарьскъ]]
 | Глава = 
