--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -6,6 +6,7 @@
 </div>
 
 == Зьри такожде ==
+Блъгаре
 {{InterWiki|mk|Главна страница||македоньскыимь}}
 {{commonscat|Macedonian language}}
 [[Category:Словѣньсци ѩзыци]]
