--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -6,7 +6,7 @@
 </div>
 
 == Зьри такожде ==
-Блъгаре
+'''Блъгаре-Блъгарьскъ_ѩзыкъ''' [http://http://cu.wikipedia.org/wiki/Блъгарьскъ_ѩзыкъ]
 {{InterWiki|mk|Главна страница||македоньскыимь}}
 {{commonscat|Macedonian language}}
 [[Category:Словѣньсци ѩзыци]]
