--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -6,9 +6,9 @@
 </div>
 
 == Зьри такожде ==
-[[Блъгарьскъ ѩзыкъ]]
 {{InterWiki|mk|Главна страница||македоньскыимь}}
 {{commonscat|Macedonian language}}
+* [[Блъгарьскъ ѩзыкъ]]
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Македонї]]
 
