*Empty MediaWiki Message*

--- a/Блъгарьскъ_ѩꙁꙑкъ.mw
+++ b/Блъгарьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 '''Блъгарьскъ ѩзыкъ''' или блъгарьщина (блъгарьскы: ''български език'') сѧ къ їндоеѵрѡпьска дрѣвесе словѣньска вѣтви южнословѣньсцѣ вѣтви оноситъ.
-Блъгарьскы бесѣдѹѭтъ земл҄и [[Блъгарї|Димократїѩ Блъгарїѩ]] (6697 тысѫщь людии, прѣпись 2001 года), чѧстьно прилежѧщь Блъгарїи землхъ [[Грьци|Грькъ]], [[Македонї|Македонїи]] (1,6 тысѫщь людии, 1994), а одѣлѥны островьци Тѹрьцѣхъ (101 тысѫща людии, 1965, их бол҄ьши чѧсть «помаци» иже блъгаре-мѹслимы сѫтъ), Рѹмынїи (6700 людии, 2002, земл Банатъ), Молдовы (около 70 тысѫщь людии, 1989), южьнѣ [[Ѹкраина|Ѹкраинѣ]] (131 тс҃щ лд҃и, 2001), Ѫгрѣхъ, [[Чешьско|Чесѣхъ]] и [[Словѣньско|Словѣньсцѣ]], и за границами Еѵрѡпы АѤДѣхъ, Канадѣ (8 тс҃щ лд҃и) и Аѵстралїи. Блъгарьскыимь ѩзыкомь ко бесѣды главьномь срѣдьствомь сѧ бол҄ьше 7 леѡдръ лд҃и польѕѹѭтъ.
+Блъгарьскы бесѣдѹѭтъ земл҄и [[Блъгарї|Димократїѩ Блъгарїѩ]] (6697 тысѫщь людии, прѣпись 2001 года), чѧстьно прилежѧщь Блъгарїи землхъ [[Грьци|Грькъ]], [[Македонї|Македонїи]] (1,6 тысѫщь людии, 1994), а одѣлѥны островьци Тѹрьцѣхъ (101 тысѫща людии, 1965, их бол҄ьши чѧсть «помаци» иже блъгаре-мѹслимы сѫтъ), Рѹмынїи (6700 людии, 2002, земл Банатъ), Молдовы (около 70 тысѫщь людии, 1989), южьнѣ [[Ѹкраина|Ѹкраинѣ]] (131 тс҃щ лд҃и, 2001), Ѫгрѣхъ, [[Чешьско|Чесѣхъ]] и [[Словѣньско|Словѣньсцѣ]], и за границами Еѵрѡпы АѤДѣхъ, [[Канада|Канадѣ]] (8 тс҃щ лд҃и) и Аѵстралїи. Блъгарьскыимь ѩзыкомь ко бесѣды главьномь срѣдьствомь сѧ бол҄ьше 7 леѡдръ лд҃и польѕѹѭтъ.
 == Блъгарьска азъбѹкы  ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Бб Вв Гг Дд Ее Жж Зз Ии Йй<br>Кк Лл Мм Нн Оо Пп Рр Сс ТтУу Фф<br> Хх Цц Чч Шш Щщ Чч Ъъ Ьь Юю Яя
