*Empty MediaWiki Message*

--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -1,19 +1,25 @@
-{{Дрьжава|name = Їспанїꙗ
+{{Дрьжава|name = Їспані́ꙗ
 | знамѧ= [[Видъ:Flag of Spain.svg|150px]]
 | знакъ = [[image:Escudo de España.png|80px]]
 | map = LocationSpain.svg 
-| Стольнъ градъ = [[Мадрїдъ]]
-| Ѩзыкъ = [[Їспанїискъ ѩзык|їспанїискъ]] 
+| Речениѥ = Plus Ultra
+| Стольнъ градъ = [[Мадри́дъ]]
+| Ѩзыкъ = [[їспані́искъ ѩꙁꙑ́къ|їспані́искъ]] · [[галисі́искъ ѩꙁꙑ́къ|галисі́искъ]] · [[каталаньскъ ѩꙁꙑ́къ|каталаньскъ]] и [[ба́скъскъ ѩꙁꙑ́къ|ба́скъскъ]] 
 | Глава = 
 | area =
-| Людии =  41 леѡдръ
-| Почѧта = 
+| Людии =  41 лєѡ́дръ
+| Почѧта = 1492
 }}
-'''Їспа́нїꙗ''' ({{Lang-es|España}}) Южьны [[Єѵрѡ́па]] дрьжава ѥстъ, стольнъ градъ [[Мадри́дъ]] ѥстъ. Їспанїꙗ сътворѥна 1492 лѣта ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадридъ]] и [[Барсело́на]] ѥсте, дрьжавьнъ [[їспанїискъ ѩзыкъ]] ѥстъ.
+'''Їспані́ꙗ''' и {{Lang-es|España}} · єпі́симьно имѧ '''Кралѥ́вьство Їспані́ꙗ''' и {{Lang-es|Reino de España}} · Южьнꙑ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] дрьжа́ва ѥ́стъ ⁙ сто́льнъ гра́дъ [[Мадри́дъ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 41 лєѡ́дръ ⁙ Бол҄ьша града [[Мадридъ]] и [[Барсєло́на]] ѥстє́ ⁙ дрьжа́вьнꙑ ѩꙁꙑци́ [[їспані́искъ ѩꙁꙑ́къ|їспані́искъ]] · [[галисі́искъ ѩꙁꙑ́къ|галисі́искъ]] · [[каталаньскъ ѩꙁꙑ́къ|каталаньскъ]] и [[ба́скъскъ ѩꙁꙑ́къ|ба́скъскъ]] сѫ́тъ
+
+== їсторі́ꙗ ==
+Їспані́иско кралѥ́вьство 1492 лѣ́та по ѥдинѥнии кралѥвьствъ Араго́нъ и Кастилі́ꙗ почѧто бѣ 
+
+1985 лѣта Їспані́ꙗ въшьла въ съста́въ Єѵрѡ́пьска съвѫ́ꙁа бѣ
 {{Commonscat|Spain}}
 [[Category:Дрьжа́вꙑ]]
 [[Category:Єѵрѡ́па]]
-
+[[Category:Єѵрѡ́пьскъ съвѫ́ꙁъ]]
 {{Link FA|ia}}
 {{Link FA|nah}}
 {{Link FA|vi}}
