*Empty MediaWiki Message*

--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Їспані́ꙗ
+{{Дрьжава|name = Кралѥ́вьство Їспані́ꙗ<br>Reino de España
 | знамѧ= [[Видъ:Flag of Spain.svg|150px]]
 | знакъ = [[image:Escudo de España.png|80px]]
 | map = LocationSpain.svg 
