--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Кралѥ́вьство Їспані́ꙗ<br>Reino de España
 | знамѧ= [[Видъ:Flag of Spain.svg|150px]]
-| знакъ = [[image:Escudo de España.png|80px]]
+| знакъ = [[image:Escudo de España (mazonado).svg|80px]]
 | map = LocationSpain.svg 
 | Речениѥ = Plus Ultra
 | Стольнъ градъ = [[Мадри́дъ]]
