--- a/Вътора_словѣньска_аꙁъбоукꙑ.mw
+++ b/Вътора_словѣньска_аꙁъбоукꙑ.mw
@@ -163,5 +163,6 @@
 [[ko:초기 키릴 문자]]
 [[mk:Старословенско писмо]]
 [[nl:Oudcyrillisch alfabet]]
+[[ru:Старославянская азбука]]
 [[szl:Klimentowica]]
 [[zh:早期西里尔字母]]
