/* ꙁьри́ та́кождє */

--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -16,6 +16,7 @@
 {{InterWiki|mk|Главна страница||макєдо́ньскꙑимь}}
 {{commonscat|Macedonian language}}
 * [[Блъга́рьскъ ѩꙁꙑ́къ]]
+* [[Срь́бьскъ ѩꙁꙑ́къ]]
 
 [[Category:Словѣ́ньсци ѩꙁꙑци́]]
 [[Category:Макєдоні́ꙗ]]
