/* ꙁьри́ та́кождє */

--- a/Блъгарьскъ_ѩꙁꙑкъ.mw
+++ b/Блъгарьскъ_ѩꙁꙑкъ.mw
@@ -19,6 +19,8 @@
 {{InterWiki|bg|Начална страница||блъга́рьскꙑимь}}
 {{commonscat|Bulgarian languge}}
 * [[Макєдо́ньскъ ѩꙁꙑ́къ]]
+* [[Срь́бьскъ ѩꙁꙑ́къ]]
+
 [[Category:Блъгарі́ꙗ]]
 [[Category:Словѣ́ньсци ѩꙁꙑци́]]
 
