/* ꙁьри́ та́кождє */

--- a/Срьбьскъ_ѩꙁꙑкъ.mw
+++ b/Срьбьскъ_ѩꙁꙑкъ.mw
@@ -16,6 +16,7 @@
 {{InterWiki|sr|Главна страна||cрь́бьскꙑимь}}
 {{commonscat|Serbian language}}
 * [[Влькъ Стефановищь Караджищь]]
+* [[Блъга́рьскъ ѩꙁꙑ́къ]]
 
 [[Category:Словѣ́ньсци ѩꙁꙑци́]]
 [[Category:Срь́бїꙗ]]
