--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -25,14 +25,11 @@
 # Съвѣтьска чѧсть
 # Аутозаводьска чѧсть
 # Приокьска чѧсть
-== Зьри такожде ==
+== ꙁьри́ та́кождє ==
 <references />
 {{commonscat|Nizhny Novgorod}}
 {{Рѡсїѩ наибол҄ьше гради}}
-
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсї]]
-
+[[Category:Рѡсі́ѩ гра́ди]]
 [[ar:نيجني نوفغورود]]
 [[be-x-old:Ніжні Ноўгарад]]
 [[bg:Нижни Новгород]]
