*Empty MediaWiki Message*

--- a/Ишємбаи.mw
+++ b/Ишємбаи.mw
@@ -1,16 +1,16 @@
 {{Градъ|Имѧ = Ишємба́и
 | знамѧ= Flag_of_Ishimbai_(Bashkortostan).png
-| знакъ = Flag_of_Ishimbai_(Bashkortostan).png
+| знакъ = Coat of Arms of Ishimbai (Bashkortostan).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
 | Глава = Маратъ Гаисинъ
 | Людии = 74.300 (2008)
 | Основанъ = 1932
-| Харта = http://maps.yandex.ru/map_search.xml?map=5&lay=28&id=3902
+| Харта =[[Ви́дъ:Ishimbay location.PNG]]
 |}}
 '''Ишємба́и''' и {{lang-ba|Ишембай}} · {{lang-ru|Ишимбай}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Башкортостанъ|Башкортостаноу]] Ишємба́искꙑ чѧ́сти гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 74.300 (2008).
 
 Основанъ 1932 лѣ́та ⁙ нарєчєнъ гра́дъ съ 1940 лѣ́та ѥ́стъ ⁙ Градъ ꙁьданъ сълиꙗнии рѣкъ [[Бѣлаꙗ (рѣка)|Бѣлꙑѩ]] и [[Таироук]]а ѥ́стъ ⁙ С҄и рѣкꙑ ꙁнацѣ и ꙁнамѧни гра́да видѣти можєщи
-
+{{commonscat|Ishimbay}}
 [[Category:Рѡсі́ѩ гра́ди]]
 [[af:Isjimbai]]
 [[an:Iximbai]]
