*Empty MediaWiki Message*

--- a/Асмєра.mw
+++ b/Асмєра.mw
@@ -12,7 +12,7 @@
 '''Асмє́ра''' и {{lang-ti|ኣስመራ}} · [[Єрѷѳрі́ꙗ|Єрѷѳрі́ѩ]] сто́льнъ гра́дъ ѥ́стъ ⁙ Люди́и 579 тꙑ́сѫщь обита́ѥтъ
 
 {{commonscat|Asmara}}
-[[Category:Стольни гради]][[Category:Єрѷѳрі́ꙗ]]
+[[Category:Сто́льни гра́ди]][[Category:Єрѷѳрі́ꙗ]]
 
 [[af:Asmara]]
 [[am:አስመራ]]
