robot  Modifying: [[bo:ཨ་མེ་རི་ཁ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རྒྱལ་ཁབ།]]

--- a/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
+++ b/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
@@ -24,6 +24,14 @@
 * [[Тє́ѯасъ]]
 [[Category:Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ]]
 
+{{Link FA|ceb}}
+{{Link FA|fa}}
+{{Link FA|fo}}
+{{Link FA|ml}}
+{{Link FA|sl}}
+{{Link FA|vi}}
+{{Link FA|zh}}
+
 [[af:Verenigde State van Amerika]]
 [[als:USA]]
 [[am:አሜሪካ]]
@@ -43,7 +51,7 @@
 [[bg:Съединени американски щати]]
 [[bi:Yunaeted Stet blong Amerika]]
 [[bn:মার্কিন যুক্তরাষ্ট্র]]
-[[bo:མེ་གོ]]
+[[bo:ཨ་མེ་རི་ཁ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རྒྱལ་ཁབ།]]
 [[bpy:তিলপারাষ্ট্র]]
 [[br:Stadoù-Unanet Amerika]]
 [[bs:Sjedinjene Američke Države]]
@@ -51,7 +59,7 @@
 [[cbk-zam:Estados Unidos de America]]
 [[cdo:Mī-guók]]
 [[ce:Iамерка пачхьалк]]
-[[ceb:Estados Unidos]] {{Link FA|ceb}}
+[[ceb:Estados Unidos]]
 [[chr:ᎠᎺᎢ]]
 [[co:Stati Uniti d'America]]
 [[crh:Amerika Qoşma Ştatları]]
@@ -71,9 +79,9 @@
 [[et:Ameerika Ühendriigid]]
 [[eu:Ameriketako Estatu Batuak]]
 [[ext:Estaus Unius]]
-[[fa:ایالات متحده آمریکا]] {{Link FA|fa}}
+[[fa:ایالات متحده آمریکا]]
 [[fi:Yhdysvallat]]
-[[fo:USA]] {{Link FA|fo}}
+[[fo:USA]]
 [[fr:États-Unis]]
 [[frp:Ètats-Unis d’Amèrica]]
 [[fur:Stâts Unîts di Americhe]]
@@ -135,7 +143,7 @@
 [[mdf:Америконь Аймакнень Соткссь]]
 [[mg:Etazonia]]
 [[mk:Соединети Американски Држави]]
-[[ml:അമേരിക്കന്‍ ഐക്യനാടുകള്‍]] {{Link FA|ml}}
+[[ml:അമേരിക്കന്‍ ഐക്യനാടുകള്‍]]
 [[mn:Америкийн Нэгдсэн Улс]]
 [[mr:अमेरिकेची संयुक्त संस्थाने]]
 [[ms:Amerika Syarikat]]
@@ -182,7 +190,7 @@
 [[si:අමෙරිකා‍වේ එක්සත් රාජ්‍යයන්]]
 [[simple:United States]]
 [[sk:Spojené štáty]]
-[[sl:Združene države Amerike]] {{Link FA|sl}}
+[[sl:Združene države Amerike]]
 [[sm:Iunaite Sitete o Amerika]]
 [[sq:Shtetet e Bashkuara]]
 [[sr:Сједињене Америчке Државе]]
@@ -206,7 +214,7 @@
 [[ur:ریاستہائے متحدہ امریکہ]]
 [[uz:Amerika Qoʻshma Shtatlari]]
 [[vec:Stati Unìi de la Mèrica]]
-[[vi:Hoa Kỳ]] {{Link FA|vi}}
+[[vi:Hoa Kỳ]]
 [[vls:Verênigde Stoaten van Amerika]]
 [[vo:Lamerikän]]
 [[wa:Estats Unis]]
@@ -217,7 +225,7 @@
 [[yo:Ìpínlẹ̀ Ìsọ̀kan Ilẹ̀ Amerika]]
 [[za:Meijgoz]]
 [[zea:Vereênigde Staeten]]
-[[zh:美國]] {{Link FA|zh}}
+[[zh:美國]]
 [[zh-classical:美國]]
 [[zh-min-nan:Bí-kok]]
 [[zh-yue:美國]]
