--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -43,6 +43,7 @@
 [[ru:Александр VI (папа римский)]]
 [[sk:Alexander VI.]]
 [[sl:Papež Aleksander VI.]]
+[[sr:Александар VI]]
 [[sv:Alexander VI]]
 [[sw:Papa Alexander VI]]
 [[th:สมเด็จพระสันตะปาปาอเล็กซานเดอร์ที่ 6]]
