--- a/Википєдїꙗ.mw
+++ b/Википєдїꙗ.mw
@@ -1,5 +1,5 @@
 [[Видъ:WikiSlavNova2-4.png|thumb|Словѣньскꙑѩ Википє́дїѩ ꙁна́къ]]
-'''Википє́дїꙗ''' · {{Lang-en|Wikipedia}} · мъногꙑ ѩꙁꙑкꙑ́ єнкѷклопє́дїꙗ ѥ́стъ · ѭ́жє къ́жьдо иꙁмѣнꙗ́ти мо́жєтъ ⁙ [[Викимє́дїꙗ|Викимє́дїѩ]] опꙑтьствованиѥ ѥ́стъ ⁙ почѧта ѥ́стъ 2001 лѣ́та ⁙ [[Словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньскꙑимь]] ѩꙁꙑко́мь почѧта ѥ́стъ їоунїи 2006 лѣ́та
+'''Википє́дїꙗ''' · {{Lang-en|Wikipedia}} · мъногꙑ ѩꙁꙑкꙑ́ єнкѷклопє́дїꙗ ѥ́стъ · Мєждоусѣтии пьсана ѥ́стъ · ѭ́жє къ́жьдо иꙁмѣнꙗ́ти мо́жєтъ ⁙ [[Викимє́дїꙗ|Викимє́дїѩ]] опꙑтьствованиѥ ѥ́стъ ⁙ почѧта ѥ́стъ 2001 лѣ́та ⁙ [[Словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньскꙑимь]] ѩꙁꙑко́мь почѧта ѥ́стъ їоунїи 2006 лѣ́та
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Wikipedia}}
