robot  Adding: [[pl:Sandanski]]

--- a/Санданскꙑи.mw
+++ b/Санданскꙑи.mw
@@ -21,9 +21,10 @@
 [[fr:Sandanski]]
 [[hr:Sandanski]]
 [[it:Sandanski]]
+[[ja:サンダンスキ]]
 [[mk:Сандански]]
 [[nl:Sandanski]]
-[[ja:サンダンスキ]]
+[[pl:Sandanski]]
 [[pt:Sandanski]]
 [[ro:Sandanski]]
 [[ru:Сандански]]
