*Empty MediaWiki Message*

--- a/Сѷмєѡнъ_А҃_Вєликъ.mw
+++ b/Сѷмєѡнъ_А҃_Вєликъ.mw
@@ -1,6 +1,6 @@
-'''Сѷмеѡнъ А Великъ''' ({{Lang-bg| Симеон I Велики}}) (893—927) [[Блъгарї|Блъгарьска]] цѣсарьства цѣсар҄ь бѣ. Ѥгоже [[стольнъ градъ]] [[Прѣславъ]] бѣ.
-
-[[Category:Блъгарї]]
+'''Сѷмєѡ́нъ А҃ Вєли́къ''' и {{Lang-bg| Симеон I Велики}} · 893—927 · [[Блъгарі́ꙗ|Блъгарьска]] цѣсарьства цѣсар҄ь бѣ ⁙ Ѥгожє [[сто́льнъ гра́дъ]] [[Прѣславъ]] бѣ ⁙ [[Пє́тръ А҃ · блъга́рьскъ|Пєтра А҃]] отьць ѥ́стъ
+{{commonscat|Simeon I of Bulgaria}}
+[[Category:Блъгарі́ꙗ]]
 [[Category:Людиѥ]]
 
 {{Link FA|en}}
