--- a/Ꙁєлєноградъ.mw
+++ b/Ꙁєлєноградъ.mw
@@ -1,19 +1,20 @@
-{{Градъ|Имѧ = Зеленоградъ
+{{Градъ|Имѧ = Ꙁєлєногра́дъ
 | знамѧ= Flag of Zelenograd (Moscow).png
 | знакъ = Zelenograd_district_of_Moscow_coa.png
-| Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
+| Дрьжава = {{Рѡсїѩ знамѧ}} [[Рѡсі́ꙗ]]
 | Глава = Анатолїи Нїколаѥвичь Смирновъ
 | Людии = 215 757
 | Основанъ = 1958
 | Харта = [[Видъ:Msk_zelao.png|200 px]]
 |}}
-'''Зеленоградъ''' ({{Lang-ru|Зеленоград}}) [[Рѡсї|Рѡсїѩ]] [[Москъвьска область|Москъвьскы области]] градъ, властьнѣ [[Москъва|Москъвы]] [[окрѫгъ|окрѫгъ]] («чѧсть») ѥстъ. Зьданъ [[Съходьн (рѣка)|Съходьни]] рѣцѣ ѥстъ. 
-Людии обитаѥтъ 215 тысѫщь. Основанъ 1958 лѣта, нареченъ градъ съ 1963 лѣта ѥстъ.
+'''Ꙁєлєногра́дъ''' и {{Lang-ru|Зеленоград}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Москъвьска о́бласть|Москъвьскꙑ о́бласти]] гра́дъ · властьнѣ [[Москъва́|Москъвꙑ]] [[окрѫгъ]] · и́ли ⁖ чѧсть ⁖ · ѥ́стъ ⁙ Ꙁьданъ [[Съходьнꙗ (рѣка)|Съходьнѣ]] рѣцѣ ѥ́стъ
+ 
+Люди́и обитаѥтъ 215 тꙑсѫщь ⁙ Основанъ 1958 лѣ́та · нарєчєнъ гра́дъ съ 1963 лѣ́та ѥ́стъ
 
 {{commonscat|Zelenograd}} 
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсї]]
-[[Катигорї:Мосъква]]
+
+[[Category:Рѡсі́ѩ гра́ди]]
+[[Category:Мосъква́]]
 
 [[ar:زيلينوغراد]]
 [[cs:Zelenograd]]
