--- a/Аравьскъ_ѩꙁꙑкъ.mw
+++ b/Аравьскъ_ѩꙁꙑкъ.mw
@@ -126,7 +126,7 @@
 [[uk:Арабська мова]]
 [[ur:عربی زبان]]
 [[vi:Tiếng Ả Rập]]
-[[wa:Arabe]]
+[[wa:Arabe]] this language is sooooo cool
 [[zh:阿拉伯语]]
 [[zh-classical:阿拉伯語]]
 [[zh-min-nan:A-la-pek-gí]]
