*Empty MediaWiki Message*

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -1,16 +1,19 @@
-{{Дрьжава|name = Мѫголи
+{{Дрьжава|name = Мѫго́ли<br>{{lat-ga|Монгол Улс}}<br> [[Ви́дъ:Monggol ulus.svg|64px]]
 | знамѧ= [[Видъ:Flag of Mongolia.svg|150px]]
 | знакъ = [[image:Mongolia coa.gif|80px]]
 | map = LocationMongolia.png
-| Стольнъ градъ = [[Ѹланбатаръ]]
-| Ѩзыкъ = 
+| Стольнъ градъ = [[Оуланбатаръ]]
+| Ѩзыкъ = [[мѫго́льскъ ѩꙁꙑ́къ|мѫго́льскъ]]
 | Глава = 
-| area =
+| Пространиѥ =1 564 116 к҃м²
 | Людии =  2 832 224
 | Почѧта = 1911
 }}
-'''Мѫголи''' (''Монгол Улс'') срѣдьн̑ии [[Асї|Асїи]] велика страна ѥстъ. Людии 2,8 леѡдръ обитаѥтъ. Стольнъ градъ [[Ѹланбатаръ]] ѥсть.
+'''Мѫго́ли''' и {{lang-mn|Монгол Улс / [[Ви́дъ:Monggol ulus.svg|32px]]}} · срѣдьнѩ [[Асі́ꙗ|Асі́ѩ]] вєлика дрьжа́ва ѥ́стъ ⁙ Дрьжавьнъ мѫго́льскъ ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и 2,8 лєѡ́дръ обита́ѥтъ ⁙ Сто́льнъ гра́дъ [[Оуланбатаръ]] ѥ́сть
 
+== Мѫго́лъ чѧ́сти ==
+[[Ви́дъ:Mongolia aimags 2007.png|thumb|left]]
+Мѫго́ли на 21 чѧстъ дєлєнꙑ сѫ́тъ · ихъжє имѧ аимаги ѥсть ⁙ Стольнъ градъ сѧ положє́ниѥмь самостоꙗ́тєл҄ьнѫ властьнѫ ѥдини́цѫ одѣлꙗ́ѥтъ
 {{commonscat|Mongolia}}
 
 [[Category:Страны]]
