--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -121,6 +121,7 @@ Aa (Ää) Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo (Öö) Pp Qq Rr Ss (ß) Tt U
 [[nrm:Allemaund]]
 [[nv:Bééshbich’ahí bizaad]]
 [[oc:Alemand]]
+[[os:Немыцаг æвзаг]]
 [[pdc:Modern Hochdeitsch]]
 [[pl:Język niemiecki]]
 [[pms:Lenga tedësca]]
