/* Климє́нтовꙑихъ боу́къвъ та́влїѥ */

--- a/Вътора_словѣньска_аꙁъбоукꙑ.mw
+++ b/Вътора_словѣньска_аꙁъбоукꙑ.mw
@@ -26,7 +26,7 @@
 |-
 |Д||[[Видъ:Early Cyrillic letter Dobro.png|30px]]||4|| /d/ ||добро||{{lat-ga|Д}}
 |-
-|Є||[[Видъ:Early Cyrillic letter Yesti.png|30px]]||5|| /e/ ||ѥстъ||{{lat-ga|Е}}
+|Є||[[Видъ:Early Cyrillic letter Yesti.png|30px]]||5|| /e/ ||ѥстъ||{{lat-ga|Е}}/{{lat-ga|Є}}
 |-
 |Ж||[[Видъ:Early Cyrillic letter Zhiviete.png|30px]]|| || /žʲ/ ||живѣтє||{{lat-ga|Ж}}
 |-
