*Empty MediaWiki Message*

--- a/Їталїꙗ.mw
+++ b/Їталїꙗ.mw
@@ -1,18 +1,21 @@
-{{Дрьжава|name = Италї
+{{Дрьжава|name = Италі́ꙗ Димократі́ꙗ<br>Repubblica Italiana
 | знамѧ= [[Видъ:Flag of Italy.svg|150px]]
 | знакъ = [[image:Italy-Emblem.svg|80px]]
 | map = LocationItaly.svg
-| Стольнъ градъ = [[Римъ]]  
-| Ѩзыкъ = [[Италїискъ ѩзыкъ|италїискъ]]
+| Стольнъ градъ = [[Ри́мъ]]  
+| Ѩзыкъ = [[Италі́искъ ѩꙁꙑ́къ|италі́искъ]]
 | Глава = 
-| area =
+| Пространиѥ = 301 230 к҃м²
 | Людии =  58 883 958
-| Почѧта = 
+| Почѧта = 1946
 }}
-'''Италї''' ({{lang-it|Italia}}) южьны [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Италиѩ стольнъ град [[Римъ]] ѥстъ. Италїи людии 58,8 леѡдръ обитаѥтъ.
+'''Италі́ꙗ''' и {{lang-it|Italia}} · єпі́симьно и́мѧ '''Италі́ꙗ Димократі́ꙗ''' и {{lang-it|Repubblica Italiana}} · южьнꙑ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] дрьжа́ва ѥ́стъ ⁙ Италі́ѩ сто́льнъ гра́д [[Ри́мъ]] ѥ́стъ ⁙ Италі́и люди́и 58,8 лєѡ́дръ обита́ѥтъ.
+
+== їсторі́ꙗ ==
+Италі́ꙗ ꙗко нꙑнѣшьнꙗ димократі́ꙗ 1946 лѣ́та почѧта бѣ ⁙ 1957 лѣ́та Италі́ꙗ въшла въ съста́въ [[Єѵрѡ́пьскꙑи свѫꙁъ|Єѵрѡ́пьска съвѫꙁа]] бѣ
 
 {{commonscat|Italia}}
-[[Category:Дрьжа́вꙑ]]
+[[Category:Италі́ꙗ]]
 
 {{Link FA|hr}}
 {{Link FA|it}}
