*Empty MediaWiki Message*

--- a/Кꙑѥвъ.mw
+++ b/Кꙑѥвъ.mw
@@ -1,21 +1,20 @@
-{{Градъ|Имѧ = Кыѥвъ
+{{Градъ|Имѧ = Кꙑ́ѥвъ
 | знамѧ= Kyiv flag.png
 | знакъ = Kiew-city-COA.PNG
-| Дрьжава = {{Ѹкраины знамѧ}}[[Оукраина]]
+| Дрьжава = {{Ѹкраины знамѧ}} [[Оукра́ина]]
 | Глава = 
-| Людии = 
+| Людии = 2 679 653
 | Основанъ = 
-| Харта = 
+| Харта = [[Ви́дъ:Map of Ukraine political simple city Kiew.png|200px]]
 |}}
 
-[[Image:Andriyivskyy Uzviz.jpeg|thumb|left|Апостола Анъдрѣѥвъ възвозъ Кыѥвѣ]]
-'''Кыѥвъ''' ({{lang-uk|Київ}}) градъ на [[Дънѣпръ|Дънѣпрѣ]] на рѣцѣ сѣдить, [[стольнъ градъ]] [[Ѹкраина|Ѹкраинѣ]].
+[[Image:Andriyivskyy Uzviz.jpeg|thumb|left|Апостола Анъдрѣѥвъ въꙁвоꙁъ Кꙑѥвѣ]]
+'''Кꙑ́ѥвъ''' и {{lang-uk|Київ}} · [[Оукра́ина|Оукра́инꙑ]] сто́льнъ и Кꙑѥвьскꙑ области гла́вьнъ гра́дъ ѥ́стъ ⁙ Ꙁьданъ рѣцѣ [[Дънѣпръ|Дънѣпрѣ]] ѥ́стъ ⁙ Люди́и 2,6 лєѡ́дръ обитаѥтъ ⁙ [[Ирѡ́и гра́дъ]] ѥ́стъ
 
-Кыѥвъ же древлѥ стольнъ градъ [[Рѹсь|Рѹси]] бѣаше .
-
-[[Category:Гради]]
-[[Category:Оукра́ина]]
-[[Category:Стольни гради]]
+Кꙑ́ѥвъ жє дрєвлѥ стольнъ градъ [[Роусь|Роуси]] бѣашє
+{{commonscat|Kiev}}
+[[Category:Оукра́инꙑ гра́ди]]
+[[Category:Сто́льни гра́ди]]
 
 [[af:Kiëf]]
 [[als:Kiew]]
