*Empty MediaWiki Message*

--- a/Чаталхѷюкъ.mw
+++ b/Чаталхѷюкъ.mw
@@ -21,6 +21,7 @@
 [[pl:Çatalhöyük]]
 [[pt:Çatalhüyük]]
 [[ru:Чатал-Гуюк]]
+[[sc:Çatal Hüyük]]
 [[sh:Çatalhöyük]]
 [[sr:Чатал Хејук]]
 [[sv:Çatalhöyük]]
