--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -17,9 +17,9 @@
 1986 лѣта Новосибирьскѣ [[метрополїтенъ]] съзижденъ бѣ.
 
 == Новосибирьска чѧсти ==
-* Заѥльцовьска чѧсть
-* Дзержиньска чѧсть
-* Желѥзнодорожьна чѧсть
+* Ꙁаѥльцовьска чѧсть
+* Ꙃержиньска чѧсть
+* Желѥꙁнодорожьна чѧсть
 * Калининьска чѧсть
 * Кировьска чѧсть
 * Лѥниньска чѧсть
@@ -27,6 +27,7 @@
 * Пѥрвомаїска чѧсть
 * Съвѣтьска чѧсть
 * Срѣдьн чѧсть
+
 == Зьри такожде ==
 {{commonscat|Novosibirsk}}
 {{Рѡсїѩ наибол҄ьше гради}}
