--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -18,8 +18,8 @@
 
 == Новосибирьска чѧсти ==
 * Ꙁаѥльцовьска чѧсть
-* Ꙃержиньска чѧсть
-* Желѥꙁнодорожьна чѧсть
+* Ꙃєржиньска чѧсть
+* Жєлѥꙁнодорожьна чѧсть
 * Калининьска чѧсть
 * Кировьска чѧсть
 * Лѥниньска чѧсть
