--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -2,7 +2,7 @@
 
 
 
-[[Катигорї:Македонї]] [[Катигорї:Пѣвьци]]
+[[Category:Макєдоні́ꙗ]] [[Category:Пѣвьци]]
 
 [[az:Toşe Proeski]]
 [[bat-smg:Toše Proeski]]
