--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -2,7 +2,7 @@
 
 
 
-[[Category:Макєдоні́ꙗ]] [[Category:Пѣвьци]]
+[[Катигорі́ꙗ:Макєдоні́ꙗ]] [[Катигорі́ꙗ:Пѣвьци]]
 
 [[az:Toşe Proeski]]
 [[bat-smg:Toše Proeski]]
