*Empty MediaWiki Message*

--- a/Сатана.mw
+++ b/Сатана.mw
@@ -2,8 +2,6 @@
 
 '''Сотона́''' ({{lang-el|Σατανᾶς}}, [[Симїтьчьскъ ѩꙁꙑ́къ|cимїтьчьскъ]] שָׂטָן).
 
-
-[[Катигорі́ꙗ:Хрїстїаньство]]
-
+[[Category:Крьстиꙗньство]]
 
 [[fr:Satan]]
