--- a/Хрїстїаньство.mw
+++ b/Хрїстїаньство.mw
@@ -1,7 +1,7 @@
 [[Видъ:Christianity percentage by country.png|thumb|Хрїстїаньства простор]]
 '''Крьстиꙗньство''' [[ѥдинобожиѥ|ѥдинобожиꙗ]] вѣра ѥстъ, ꙗже основана оучении [[Їисъ Хрїстъ|Їисѹ Хрїста]] ѥстъ, ꙗко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ. Нынѣ хрїстїаньство сѧ мъногы образы авлꙗѥтъ, сѥго дѣл҄ьма нѣстъ възможьности глаголати ꙗко ѥдина вѣра ѥстъ. Хрїстїаньство дѣлѥно на мъногы тлъкованиꙗ ѥстъ, бол҄ьшаꙗ из ихъже [[Православиѥ]], [[Римьскъ Каѳолїкїсмъ]] и [[Папоборьчьска Вѣра]] (Протестантїсмъ).
 {{Commonscat|Christianity}}
-[[category:Хрїстїаньство|*]]
+[[Category:Крьстиꙗньство]]
 
 {{Link FA|ja}}
 {{Link FA|mk}}
