*Empty MediaWiki Message*

--- a/Наꙁарєѳъ.mw
+++ b/Наꙁарєѳъ.mw
@@ -1,7 +1,5 @@
 '''Назарѣ́тъ''' и '''Назаре́тъ''' ({{lang-el|Ναζαρέθ}}).
 
-
-[[Катигорі́ꙗ:Хрїстїаньство]]
-
+[[Category:Крьстиꙗньство]]
 
 [[fr:Nazareth]]
